# cqit

./: .envrc  README.md  compute_mmd.py  generate_3d_sho.py  generate_mass_spring_data.py  loss.py  pyproject.toml  threed_sho_conserved_qts.py  train.py  train_jupyter.ipynb  train_jupyter_3d_sho.ipynb  train_jupyter_3d_sho_vae.ipynb
src/cqit/: __init__.py
