[project]
name = "cqit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Kyimpopkin", email = "39439486+alxkp@users.noreply.github.com" }
]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "cqit:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "pdbp>=1.5.0",
    "ruff_lsp>=0.0.53",
    "pyright>=1.1.360",
    "ipython>=8.24.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cqit"]
